Revision history for Perl extension Config::MethodProxy.

{{$NEXT}}

0.01 2015-12-29

 - First release.
