@@ -39,7 +39,7 @@ without jumping through a bunch of hoops:
         dsn: DBI:mysql:database=foo
         username: bar
         password:
-            - &proxy
+            - $proxy
             - MyApp::Config
             - get_db_password
             - bar
@@ -50,10 +50,10 @@ calling the method.
 
 A method proxy, in Perl syntax, looks like this:
 
-    ['&proxy', $package, $method, @args]
+    ['$proxy', $package, $method, @args]
 
-Which is then converted to a method call and replaced by the return value of
-the method call:
+The C<$proxy> string can also be written as C<&proxy>.  The above is then
+converted to a method call and replaced by the return value of the method call:
 
     $package->$method( @args );
 
@@ -84,11 +84,11 @@ If a circular reference is detected an error will be thrown.
     if (is_method_proxy( $some_data )) { ... }
 
 Returns true if the supplied data is an array ref where the first value
-is the string C<&proxy>.
+is the string C<$proxy> or C<&proxy>.
 
 =head2 call_method_proxy
 
-    call_method_proxy( ['&proxy', $package, $method, @args] );
+    call_method_proxy( ['$proxy', $package, $method, @args] );
 
 Calls a method proxy and returns the value.
 
